# xf86-video-opentegra

./: configure.ac
src/: Makefile.am  compat-api.h  dri2.c  driver.c  driver.h  drm_plane.c  drm_plane.h  drmmode_display.c  drmmode_display.h  exa.c  exa.h  host1x.h  tegra_pixmap.h  tegra_stream.c  tegra_stream.h  vblank.c  video_overlay.c  video_overlay.h  xv.c
src/2d/: Makefile.am  class_ids.h  hw_gr2d.h  tegra_2d.h  tegra_2d_allocator.c  tegra_2d_allocator.h  tegra_2d_context.c  tegra_2d_context.h  tegra_2d_copy.c  tegra_2d_fill.c  tegra_2d_frcopy.c  tegra_2d_frcopy.h  tegra_2d_g2copy.c  tegra_2d_g2copy.h  tegra_2d_g2fill.c  tegra_2d_g2fill.h  tegra_2d_reg_g2sb.h  tegra_2d_reg_host.h  tegra_2d_sbcopy.c  tegra_2d_sbcopy.h  tegra_2d_surface.c  tegra_2d_surface.h  tegra_2d_util.c  tegra_2d_util.h  tegra_stream.c  tegra_stream.h
src/2d/TLSF/: Makefile.am
src/drm/: channel.c  fence.c  job.c  private.h  pushbuf.c  tegra.c  tegra.h  xf86atomic.h
